# learn-python

./: .flake8  .gitignore  mypy.ini  pyproject.toml
src/: main.py  sum.py
src/adt/: main.py
src/pattern_match/: fizzbuzz.py  sum.py
