[tool.poetry]
package-mode = false
name = "learn-python"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pep8-naming = "^0.13.3"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_column_numbers = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"